--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,7 +5,9 @@
       "label": "Run",
       "type": "shell",
       "command": "${workspaceFolder}/.venv/bin/python",
-      "args": ["code/main.py"],
+      "args": [
+        "code/main.py"
+      ],
       "group": {
         "kind": "build",
         "isDefault": true
@@ -14,10 +16,9 @@
       "presentation": {
         "echo": true,
         "reveal": "always",
-        "focus": false,
+        "focus": true,
         "panel": "shared"
       }
     }
   ]
 }
-
